@@ -4,5 +4,7 @@ Thanks To
 All the people listed here helped improving Jinja a lot, provided
 patches, helped working out solutions etc. Thanks to all of you!
 
+- Ronny Pfannschmidt
 - Axel Böhm
 - Alexey Melchakov
+- Stefan Ebner
