@@ -61,11 +61,14 @@ Note that you have to give it a higher priority in the MRO than the
         
         def __init__(self, path):
             self.path = path
-            CachedLoaderMixin.__init__(
+            CachedLoaderMixin.__init__(self,
                 True,       # use memory caching
                 40,         # for up to 40 templates
                 '/tmp',     # additionally save the compiled templates in /tmp
-                True        # and reload cached templates automatically if changed
+                True,       # and reload cached templates automatically if changed
+                'foo'       # optional salt used to keep templates with the same
+                            # name in the same cache folder, but from different
+                            # loaders. New in Jinja 1.1 and can be omitted.
             )
 
         def get_source(self, environment, name, parent):
